<resources>
    <string name="app_name">MyTask</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_profile_fragment">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="id">Id</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_task">Task</string>
    <string name="add_task">Add Task</string>
    <string name="history">History</string>
    <string name="title_friends">Friends</string>
    <string name="icon_back">icon back</string>
    <string name="add_friends">Add Friends</string>
    <string name="search_your_friends">Search your friends</string>
    <string name="add">ADD</string>
    <string name="gambar">gambar</string>
    <string name="txt_login">Login</string>
    <string name="password">Password</string>
    <string name="notification">Notification</string>
    <string name="sistem_pakar">Sistem Pakar</string>
    <string name="desc_welcome_screen">Simplify Your Life Amplify \nYour Achievements</string>
    <string name="desc_onboarding_screen">Start Your Day with \nOrganized Tasks</string>
    <string name="chat">Chat</string>
    <string name="title_chat">Inferensi Forward Chaining/Backward \nChaining</string>

    <!-- Other string resources -->
    <string-array name="language">
        <item>Individual</item>
        <item>Group</item>
    </string-array>

    <string-array name="data_photo_friends">
        <item>@drawable/img_friends</item>
        <item>@drawable/img_friends1</item>
        <item>@drawable/img_friends2</item>
        <item>@drawable/img_friends3</item>
        <item>@drawable/img_friends4</item>
        <item>@drawable/img_friends5</item>
        <item>@drawable/img_friends6</item>
    </string-array>

    <string-array name="name_friends">
        <item>Desirae Philips</item>
        <item>Cheyenne Torff</item>
        <item>Ruben Bergson</item>
        <item>Desirae Philips</item>
        <item>Alfonso Rhiel Madsen</item>
        <item>Brandon Bator</item>
        <item>Terry George</item>
    </string-array>

    <string-array name="desc_notifikasi">
        <item>Sistem Pakar deadline in 5 days!!!</item>
        <item>task added successfully</item>
        <item>Pemrograman web lanjut not yet completed, \ndeadline remaining 7 days !!!</item>
        <item>English successfully completed</item>
        <item>Arash Buana was successfully added as friend</item>
        <item>Fisika Penalaran deadline in 2 days!!!</item>
    </string-array>

    <string-array name="desc_task">
        <item>Acimah Sidauruk</item>
        <item>Eli Pujastuti</item>
        <item>Irma Rofni Wulandari</item>
        <item>Rosdi Ummar</item>
    </string-array>

    <string-array name="title_task">
        <item>Sistem Pakar</item>
        <item>Statistika</item>
        <item>Pemrograman \nWeb Lanjut</item>
        <item>Pemrograman Mobile</item>
    </string-array>

    <string-array name="presentes_task">
        <item>50%</item>
        <item>60%</item>
        <item>40%</item>
        <item>70%</item>
    </string-array>

</resources>