<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mytask.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_add_task"
            app:destination="@id/navigation_add_task"/>
        <action
            android:id="@+id/action_navigation_home_to_notification"
            app:destination="@id/notificationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_task"
        android:name="com.example.mytask.ui.task.TaskFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_navigation_task_to_addTaskFragment"
            app:destination="@id/navigation_add_task" />
        <action
            android:id="@+id/action_navigation_task_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.example.mytask.ui.friends.FriendsFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_navigation_friends_to_addFriendsFragment"
            app:destination="@id/addFriendsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mytask.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_add_task"
        android:name="com.example.mytask.ui.addTask.AddTaskFragment"
        android:label="fragment_add_task"
        tools:layout="@layout/fragment_add_task" >
        <action
            android:id="@+id/action_navigation_add_task_to_task"
            app:destination="@id/navigation_task" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.mytask.ui.history.HistoryFragment"
        android:label="fragment_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_history_to_task"
            app:destination="@id/navigation_task" />
    </fragment>

    <fragment
        android:id="@+id/addFriendsFragment"
        android:name="com.example.mytask.ui.addFriends.AddFriendsFragment"
        android:label="fragment_add_friends"
        tools:layout="@layout/fragment_add_friends" >
        <action
            android:id="@+id/action_add_friends_to_friends"
            app:destination="@id/navigation_friends" />
    </fragment>

    <fragment
        android:id="@+id/navigation_new_group"
        android:name="com.example.mytask.ui.Group.newGroupFragment"
        android:label="@string/title_task"
        tools:layout="@layout/fragment_new_group" >
        <action
            android:id="@+id/action_navigation_new_group_to_navigation_home"
            app:destination="@id/navigation_home" />

    </fragment>

    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.example.mytask.ui.notification.NotificationFragment"
        android:label="fragment_notification"
        tools:layout="@layout/fragment_notification" >
        <action
            android:id="@+id/action_notification_to_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_group"
        android:name="com.example.mytask.ui.Group.CreateGroupFragment"
        android:label="fragment_create_group"
        tools:layout="@layout/fragment_create_group" >
        <action
            android:id="@+id/action_createFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>
