<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.TaskFragment">

    <TextView
        android:id="@+id/text_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/title_task"
        android:textAlignment="center"
        android:fontFamily="@font/font_1"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rlsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded"
        app:layout_constraintTop_toBottomOf="@+id/text_task">

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_card"
            android:paddingStart="16dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:drawableEnd="@drawable/ic_search"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="Autofill" />

    </RelativeLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/search_your_friends"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_history"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_card"
        android:text="@string/history"
        android:paddingEnd="20dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:drawableEnd="@drawable/ic_history"
        app:layout_constraintBottom_toBottomOf="@+id/btn_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_task" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_task"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:background="@drawable/bg_card"
        android:paddingEnd="20dp"
        android:drawableEnd="@drawable/ic_add"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:text="@string/add_task"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlsearch" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chat"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:background="@drawable/bg_card"
        android:drawableEnd="@drawable/ic_chat"
        android:paddingEnd="20dp"
        android:text="@string/chat"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_task" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTask"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="262dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>